# ndarray

./: .clang-format  .editorconfig  .gitignore  CONTRIBUTORS  LICENSE  NOTICE.md  README.md  analysis_options.yaml  copyright.yaml  ffigen.yaml  pubspec.yaml
.github/workflows/: ci.yml  update_contributors.yml
lib/: ndarray.dart
lib/src/: bindings.dart  (+5 more)
src/: CMakeLists.txt  assert.c  bind2vind.c  broadcast_shapes.c  bytes_per_element.c  dtype_char.c  function_object.c  ind2sub.c  iteration_order.c  max_view_buffer_index.c  min_view_buffer_index.c  minmax_view_buffer_index.c  ndarray.c  ndarray.h  nonsingleton_dimensions.c  numel.c  shape2strides.c  singleton_dimensions.c  strides2offset.c  strides2order.c  sub2ind.c  vind2bind.c  wrap_index.c
src/include/: ndarray.h
src/include/ndarray/: bytes_per_element.h  casting_modes.h  dtypes.h  export.h  index_modes.h  macros.h  orders.h  safe_casts.h  same_kind_casts.h
src/include/ndarray/base/: assert.h  bind2vind.h  broadcast_shapes.h  bytes_per_element.h  clamp_index.h  dtype_char.h  function_object.h  ind.h  ind2sub.h  iteration_order.h  max_view_buffer_index.h  min_view_buffer_index.h  minmax_view_buffer_index.h  nonsingleton_dimensions.h  numel.h  shape2strides.h  singleton_dimensions.h  strides2offset.h  strides2order.h  sub2ind.h  unary.h  vind2bind.h  wrap_index.h
src/include/ndarray/base/unary/: dispatch.h  dispatch_object.h  macros.h  typedefs.h
src/include/ndarray/base/unary/internal/: permute.h  range.h  sort2ins.h
src/include/ndarray/base/unary/macros/: 10d.h  10d_blocked.h  1d.h  2d.h  2d_blocked.h  3d.h  3d_blocked.h  4d.h  4d_blocked.h  5d.h  5d_blocked.h  6d.h  6d_blocked.h  7d.h  7d_blocked.h  8d.h  8d_blocked.h  9d.h  9d_blocked.h  constants.h  nd.h
src/include/ndarray/complex/: float32.h  float64.h
src/includes/: ndarray.h
src/includes/ndarray/: bytes_per_element.h  casting_modes.h  dtypes.h  macros.h  orders.h  safe_casts.h  same_kind_casts.h
src/includes/ndarray/base/: bind2vind.h  bytes_per_element.h  clamp_index.h  dtype_char.h  ind2sub.h  iteration_order.h  max_view_buffer_index.h  min_view_buffer_index.h  nonsingleton_dimensions.h  numel.h  strides2offset.h  strides2order.h  unary.h  vind2bind.h  wrap_index.h
src/includes/ndarray/base/unary/: dispatch.h  dispatch_object.h
src/includes/ndarray/base/unary/internal/: sort2ins.h
src/includes/ndarray/base/unary/macros/: 2d_blocked.h  3d.h  4d.h  5d_blocked.h  6d.h  6d_blocked.h  7d_blocked.h  8d.h  8d_blocked.h  9d.h
src/includes/ndarray/complex/: float32.h  float64.h
src/ndarray/: dtypes.h  index_modes.h  orders.h
src/ndarray/base/: bytes_per_element.h  iteration_order.h  minmax_view_buffer_index.h  strides2order.h
src/templates/: docs.txt  header.txt  source.txt
tool/: contributors.dart  copyright.dart  grind.dart  helpers.dart  loops.dart  utils.dart
